--- a/.screenrc
+++ b/.screenrc
@@ -1,4 +1,4 @@
-escape ^Zz
+escape ^Za
 
 # Change the xterm initialization string from is2=\E[!p\E[?3;4l\E[4l\E>
 # (This fixes the "Aborted because of window size change" konsole symptoms found
