--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,5 +2,21 @@ set-option -g prefix C-z
 set -g base-index 1
 set -s escape-time 0
 setw -g aggressive-resize on
+setw -g monitor-activity on
+set -g visual-activity on
+setw -g window-status-current-fg green
+setw -g mode-mouse on
+set -g status-bg black
+set -g status-fg white
+set -g status-interval 1
+
 bind-key C-a last-window
 bind-key a send-prefix
+unbind [
+bind Escape copy-mode
+unbind %
+bind | split-window -h
+bind h split-window -h
+unbind '"'
+bind - split-window -v
+bind v split-window -v
