--- a/.screenrc
+++ b/.screenrc
@@ -4,3 +4,9 @@ escape ^Za
 # (This fixes the "Aborted because of window size change" konsole symptoms found
 #  in bug #134198)
 termcapinfo xterm* 'is=\E[r\E[m\E[2J\E[H\E[?7h\E[?1;4;6l'
+
+# Start numbering at 1
+bind c screen 1
+bind ^c screen 1
+bind 0 select 1
+screen 1
