--- a/.screenrc
+++ b/.screenrc
@@ -10,3 +10,7 @@ bind c screen 1
 bind ^c screen 1
 bind 0 select 1
 screen 1
+
+hardstatus on
+hardstatus alwayslastline
+hardstatus string "%{.bW}%-w%{.rW}%n %t%{-}%+w %=%{..G} %H %{..Y} %m/%d %C%a"
