--- a/.screenrc
+++ b/.screenrc
@@ -14,3 +14,4 @@ screen 1
 hardstatus on
 hardstatus alwayslastline
 hardstatus string "%{.bW}%-w%{.rW}%n %t%{-}%+w %=%{..G} %H %{..Y} %m/%d %C%a"
+caption splitonly
