--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
-[submodule ".vim/vendor/vim-rooter"]
-	path = .vim/vendor/vim-rooter
+[submodule ".vim/bundle/vim-rooter"]
+	path = .vim/bundle/vim-rooter
 	url = https://github.com/airblade/vim-rooter.git
+[submodule ".vim/vendor/fuzzyfinder_textmate"]
+	path = .vim/vendor/fuzzyfinder_textmate
+	url = https://github.com/sethbc/fuzzyfinder_textmate.git
+[submodule ".vim/vendor/vim-pathogen"]
+	path = .vim/vendor/vim-pathogen
+	url = https://github.com/tpope/vim-pathogen.git
