--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule ".vim/vendor/vim-pathogen"]
 	path = .vim/vendor/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule ".vim/bundle/vim-surround"]
+	path = .vim/bundle/vim-surround
+	url = https://github.com/tpope/vim-surround.git
+[submodule ".vim/bundle/vim-yankring"]
+	path = .vim/bundle/vim-yankring
+	url = https://github.com/chrismetcalf/vim-yankring.git
