--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = https://github.com/mileszs/ack.vim.git
 [submodule ".vim/bundle/vim-markdown"]
 	path = .vim/bundle/vim-markdown
-	url = https://github.com/plasticboy/vim-markdown.git
+	url = https://github.com/hallison/vim-markdown.git
 [submodule ".vim/bundle/command-t"]
 	path = .vim/bundle/command-t
   url = git://git.wincent.com/command-t.git
@@ -37,3 +37,21 @@
 [submodule ".emacs.d/vendor/coffee-mode"]
   path = .emacs.d/vendor/coffee-mode
   url = git://github.com/defunkt/coffee-mode.git
+[submodule ".vim/bundle/vim-fugutive"]
+	path = .vim/bundle/vim-fugutive
+	url = https://github.com/tpope/vim-fugitive.git
+[submodule ".vim/bundle/vim-unimpaired"]
+	path = .vim/bundle/vim-unimpaired
+	url = https://github.com/tpope/vim-unimpaired.git
+[submodule ".vim/bundle/vim-endwise"]
+	path = .vim/bundle/vim-endwise
+	url = https://github.com/camthompson/vim-endwise.git
+[submodule ".vim/bundle/delimitMate"]
+  path = .vim/bundle/delimitMate
+  url = https://github.com/Raimondi/delimitMate.git
+[submodule ".vim/bundle/tcomment_vim"]
+	path = .vim/bundle/tcomment_vim
+	url = https://github.com/tomtom/tcomment_vim.git
+[submodule ".vim/bundle/snipmate.vim"]
+	path = .vim/bundle/snipmate.vim
+	url = https://github.com/msanders/snipmate.vim.git
