--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ set -g status-bg black
 set -g status-fg white
 set -g status-interval 1
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+set -g default-terminal "screen-256color"
 
 bind-key C-a last-window
 bind-key a send-prefix
