Add local settings for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,7 +9,6 @@ setw -g mode-mouse on
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 1
-set-option -g default-command "reattach-to-user-namespace -l zsh"
 set -g default-terminal "screen-256color"
 
 bind-key C-a last-window
@@ -18,7 +17,9 @@ unbind [
 bind Escape copy-mode
 unbind %
 bind | split-window -h
-bind h split-window -h
+bind s split-window -h
 unbind '"'
 bind - split-window -v
 bind v split-window -v
+
+source-file ~/.tmux.conf.local
