Fix tmux window bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,9 +17,9 @@ unbind [
 bind Escape copy-mode
 unbind %
 bind | split-window -h
-bind s split-window -h
+bind v split-window -h
 unbind '"'
 bind - split-window -v
-bind v split-window -v
+bind s split-window -v
 
 source-file ~/.tmux.conf.local
