--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,7 @@ setw -g mode-mouse on
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 1
+set -g status-right ""
 set -g default-terminal "screen-256color"
 
 bind-key C-a last-window
