--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,7 @@ set -g status-fg white
 set -g status-interval 1
 set -g status-right ""
 set -g default-terminal "screen-256color"
+set -g status-position top
 
 bind-key C-a last-window
 bind-key a send-prefix
